# Drone-landing

./: .gitignore  README.md  alignment.py  fly.py  landing.py  learn.py  learn_alignment.py  learn_hover.py  learn_landing.py  main.py  pyproject.toml
drone_landing/: __init__.py
drone_landing/env/: AlignmentAviary.py  Aviary.py  BaseAviary.py  BaseSingleAgentAviary.py  HoverAviary.py  LandingAviary.py  VisionAviary.py  __init__.py  draft.py
drone_landing/env/data/: aruco.mtl  aruco.urdf  platform.urdf  wall.urdf
tensorboard/Alignment/KIN/A2C_1/: events.out.tfevents.1668946227.cv-worker.945594.0
tensorboard/Alignment/KIN/A2C_2/: events.out.tfevents.1668946246.cv-worker.945692.0
tensorboard/Alignment/KIN/A2C_3/: events.out.tfevents.1668946281.cv-worker.945868.0
tensorboard/Alignment/KIN/A2C_4/: events.out.tfevents.1668946317.cv-worker.946034.0
tensorboard/DDPG_1/: events.out.tfevents.1668904437.work.144069.4
tensorboard/DDPG_2/: events.out.tfevents.1668924139.work.3161131.0
tensorboard/PPO_1/: events.out.tfevents.1668902773.work.144069.0
tensorboard/PPO_3/: events.out.tfevents.1668903855.work.144069.2
tensorboard/PPO_4/: events.out.tfevents.1668904115.work.144069.3
tensorboard/SAC_12/: events.out.tfevents.1668859702.work.5087.0
tensorboard/SAC_2/: events.out.tfevents.1668877626.work.22680.0
tensorboard/SAC_6/: events.out.tfevents.1668906309.work.3149433.3
tensorboard/TD3_1/: events.out.tfevents.1668924411.work.3161615.0
tensorboard/TD3_6/: events.out.tfevents.1668934829.work.3162047.3
(+45 files in other folders)
